--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cartoon Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicons@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/5e49550546.js" crossorigin="anonymous"></script>
+     
+
 </head>
 <body>
     <div class="container">
@@ -21,7 +26,20 @@
                 </ul>
             </nav>
         </header>
-               
+        <section class="hero">
+             <div class="hero-text">
+                <h5>#2 Trending</h5>
+                <h4>Top Gamers</h4>
+                <h1>GOBLINS</h1>
+                <p>Join millions of Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint itaque corporis nesciunt, quia asperiores recusandae?</p>
+                <a href="#">COMPARE</a>
+                <a href="#">WATCH GAMEPLAY</a>
+             </div>
+
+             <div class="toon">
+                <img src="images-removebg-preview.png" class="toon">
+             </div>
+        </section>    
     </div>
 </body>
 </html>
